# eecs498-game-engine-architecture

./: .clangd  .gitmodules  CLAUDE.md  CMakeLists.txt
.zed/: debug.json
src/: Engine.cpp  Engine.hpp  SceneDB.cpp  SceneDB.hpp  TemplateDB.cpp  TemplateDB.hpp  main.cpp  utils.hpp
src/include/maphelper/: maphelper.h
src/resources/: game.config  rendering.config
src/resources/actor_templates/: door.template  friend.template  wall.template
src/resources/scenes/: level_1.scene  level_2.scene
